--- a/src/app/pages/components/home/home.component.html
+++ b/src/app/pages/components/home/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<!-- <img src="assets/imgs/back.jpg" style="    width: 100%;
+height: 100%;
+border-radius: 0 !important;
+margin-top: 0px !important;
+max-width: 100% !important;"/> -->
