--- a/src/app/pages/modules/common/livecast-dialog/livecast-dialog.component.html
+++ b/src/app/pages/modules/common/livecast-dialog/livecast-dialog.component.html
@@ -1,7 +1,7 @@
 <p-toast></p-toast>
-<mat-progress-bar mode="query" *ngIf="showProgress"></mat-progress-bar>
+
 <div class="card">
-    <p-table #dt [value]="livecasts" [rows]="10" [paginator]="true" [globalFilterFields]="['title','guildId','livecastId']"
+    <p-table #dt [value]="livecasts" [rows]="5" [paginator]="true" [globalFilterFields]="['title','guildId','livecastId']"
         [(selection)]="selectedlivecasts" [rowHover]="true" dataKey="livecastId"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
@@ -31,9 +31,7 @@
                 <th pSortableColumn="creatorId">直播创建人ID <p-sortIcon field="creatorId"></p-sortIcon></th>
                 <th pSortableColumn="viewedReceiversCount">已查看人员数量 <p-sortIcon field="viewedReceiversCount"></p-sortIcon></th>
                 <th pSortableColumn="unviewedReceiversCount">未查看人员数量 <p-sortIcon field="unviewedReceiversCount"></p-sortIcon></th>
-                <th style="width: 12rem">
-                  <span style="color:red;">操作</span>
-                </th>
+               
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-livecast>
@@ -44,7 +42,8 @@
                 <td>{{livecast.guildId}}</td>
                 <td>{{livecast.livecastId}}</td>
                 <td>{{livecast.title}}</td>
-                <td><a href='javascript:' (click)="openFiles(livecast)" >{{livecast.files.length}}</a></td>
+                <!-- <td><a href='javascript:' (click)="openFiles(livecast)" >{{livecast.files.length}}</a></td> -->
+                <td>{{livecast.files.length}}</td>
                 <!-- <td>{{livecast.avatarUrl}}</td>
                 <td>{{livecast.recordUrl}}</td> -->
                 <td>{{livecast.createdDate}}</td>
@@ -52,16 +51,9 @@
                 <td>{{livecast.endDate}}</td>
                 <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td>
                 <td>{{livecast.creatorId}}</td>
-                <td><a href='javascript:' (click)="openDialog(livecast,0)" >{{livecast.viewedReceiversCount}}</a></td>
-                <td><a href='javascript:' (click)="openDialog(livecast,1)" >{{livecast.unviewedReceiversCount}}</a></td>
-                <td style="word-wrap: normal !important;word-break: normal !important;">
-                    <button *ngIf="livecast.status==0" style="margin-right: 1rem;" pButton type="button" label='删除' (click)="setLivecastStatus(livecast)" class="p-button-raised p-button-danger"></button>
-                    <button *ngIf="livecast.status!=0" style="margin-right: 1rem;" pButton type="button" label='恢复' (click)="setLivecastStatus(livecast)" class="p-button-raised p-button-success"></button>
-                    <button *ngIf="livecast.status!=0&&livecast.recordUrl==null;else elseBlock" disabled pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" (click)="DetailLivecast(livecast)" ></button>
-                    <ng-template #elseBlock>
-                        <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" (click)="DetailLivecast(livecast)" ></button>
-                    </ng-template>
-                </td>
+                <td>{{livecast.viewedReceiversCount}}</td>
+                <td>{{livecast.unviewedReceiversCount}}</td>
+               
             </tr>
         </ng-template>
         <ng-template pTemplate="summary">
@@ -72,10 +64,3 @@
     </p-table>
 </div>
 
-
-
-<p-dialog [header]="showLivecast.recordUrl!=null?'录播视频':'直播视频'" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
-    [draggable]="false" [resizable]="false">
-      <app-mp4-video *ngIf="displayModal&&showLivecast.recordUrl!=null" [url]="showLivecast.recordUrl"></app-mp4-video>
-      <app-hls-video *ngIf="displayModal&&showLivecast.recordUrl==null" [url]="showLivecast.hlsPlayUrl"></app-hls-video>
-</p-dialog>
