--- a/src/app/pages/modules/dashboards/livecast/livecast.component.html
+++ b/src/app/pages/modules/dashboards/livecast/livecast.component.html
@@ -74,8 +74,17 @@
 
 
 
-<p-dialog [header]="showLivecast.recordUrl!=null?'录播视频':'直播视频'" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
-    [draggable]="false" [resizable]="false">
+<p-dialog [header]="showLivecast.recordUrl!=null?'录播视频':'直播视频 在线人数：'+onlineCount" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
+    [draggable]="false" [resizable]="false" (onHide)="onHide(showLivecast)">
       <app-mp4-video *ngIf="displayModal&&showLivecast.recordUrl!=null" [url]="showLivecast.recordUrl"></app-mp4-video>
       <app-hls-video *ngIf="displayModal&&showLivecast.recordUrl==null" [url]="showLivecast.hlsPlayUrl"></app-hls-video>
+
+      <div class="messages">
+          <div class="top">
+            <input pInputText type="text" (keydown)="publishMessage(showLivecast,$event)" placeholder="Search..." />
+          </div>
+          <div class="body">
+            <p *ngFor="let item of messages">{{item}}</p>
+          </div>
+      </div>
 </p-dialog>
