--- a/src/app/pages/modules/common/guild-dialog/guild-dialog.component.html
+++ b/src/app/pages/modules/common/guild-dialog/guild-dialog.component.html
@@ -26,7 +26,8 @@
                 <th pSortableColumn="guildAuditMode">加入教会的方式 <p-sortIcon field="guildAuditMode"></p-sortIcon></th>
                 <th pSortableColumn="Status">教会状态 <p-sortIcon field="Status"></p-sortIcon></th>
                 <th pSortableColumn="OwnerId">教会所属人ID <p-sortIcon field="OwnerId"></p-sortIcon></th>
-                <th>教会文件</th>
+                <!-- <th>教会文件</th> -->
+                <th pSortableColumn="files.length">教会文件 <p-sortIcon field="files.length"></p-sortIcon></th>
                 <th pSortableColumn="ViolationCount">违规次数 <p-sortIcon field="ViolationCount"></p-sortIcon></th>
                 <th pSortableColumn="MembersCount">成员人数 <p-sortIcon field="MembersCount"></p-sortIcon></th>
             </tr>
