--- a/src/app/pages/modules/dashboards/guild/guild.component.html
+++ b/src/app/pages/modules/dashboards/guild/guild.component.html
@@ -30,6 +30,10 @@
                 <th>教会文件</th>
                 <th pSortableColumn="violationCount">违规次数 <p-sortIcon field="violationCount"></p-sortIcon></th>
                 <th pSortableColumn="membersCount">成员人数 <p-sortIcon field="membersCount"></p-sortIcon></th>
+
+                <th pSortableColumn="notificationCount">教会通知 <p-sortIcon field="notificationCount"></p-sortIcon></th>
+                <th pSortableColumn="discussCount">教会讨论 <p-sortIcon field="discussCount"></p-sortIcon></th>
+                <th pSortableColumn="livecastCount">教会直播 <p-sortIcon field="livecastCount"></p-sortIcon></th>
                 <th style="width: 12rem">
                   <span style="color:red;">操作</span>
                 </th>
@@ -52,6 +56,12 @@
                 <td><a href='javascript:' (click)="openFiles(guild)" >{{guild.files.length}}</a></td>
                 <td><a href='javascript:' (click)="openDialog(guild,0)" >{{guild.violationCount}}</a></td>
                 <td><a href='javascript:' (click)="openDialog(guild,1)" >{{guild.membersCount}}</a></td>
+
+
+                <td><a href='javascript:' (click)="openBlocDialog(guild,0)" >{{guild.notificationCount}}</a></td>
+
+                <td><a href='javascript:' (click)="openBlocDialog(guild,1)" >{{guild.discussCount}}</a></td>
+                <td><a href='javascript:' (click)="openBlocDialog(guild,2)" >{{guild.livecastCount}}</a></td>
                 <td style="word-wrap: normal !important;word-break: normal !important;">
                     <button *ngIf="guild.status==0" style="margin-right: 1rem;" pButton type="button" label='删除' (click)="setGuildStatus(guild)" class="p-button-raised p-button-danger"></button>
                     <button *ngIf="guild.status!=0" style="margin-right: 1rem;" pButton type="button" label='恢复' (click)="setGuildStatus(guild)" class="p-button-raised p-button-success"></button>
