--- a/src/app/pages/modules/dashboards/discuss/discuss.component.html
+++ b/src/app/pages/modules/dashboards/discuss/discuss.component.html
@@ -42,7 +42,7 @@
                 </td>
                 <td>{{discuss.guildId}}</td>
                 <td>{{discuss.discussId}}</td>
-                <td>{{discuss.title}}</td>
+                <td><a style="text-decoration: none;" href="javascript:" tooltipPosition="top" [pTooltip]="discuss.description||'未发布简介'">{{discuss.title}}</a></td>
                 <td><img *ngIf="discuss.avatarUrl!=null" [src]='discuss.avatarUrl' style="height: 100px;object-fit: cover;width: 100px;"/></td>
                 <td><a href='javascript:' (click)="openFiles(discuss)" >{{discuss.files.length}}</a></td>
                 <td>{{discuss.createdDate}}</td>
