--- a/src/app/pages/modules/dashboards/system/system.component.html
+++ b/src/app/pages/modules/dashboards/system/system.component.html
@@ -19,7 +19,7 @@
       </div>
     </p-panel>
 
-    <p-panel header="昨天统计" [toggleable]="true">
+    <p-panel header="昨天统计" [toggleable]="true" >
       <div [ngStyle]="{'background-color': backcolor,'height':'100%'}">
         <app-text-area id="yesterDayNewUserCount" [unitIsNetwork]="false" [from]="yesterDayNewUserCount" class="card" (textClick)="textClick('yesterDayNewUserCount');"></app-text-area>
      
@@ -37,7 +37,7 @@
     </p-panel>
 
 
-    <p-panel header="总共统计" [toggleable]="true">
+    <p-panel header="总共统计" [toggleable]="true" [collapsed]="true">
       <div [ngStyle]="{'background-color': backcolor,'height':'100%'}">
         <app-text-area id="sumNewUserCount" [unitIsNetwork]="false" [from]="sumNewUserCount" class="card"></app-text-area>
      
@@ -57,7 +57,7 @@
 
 
 
-    <p-panel header="本月统计" [toggleable]="true">
+    <p-panel header="本月统计" [toggleable]="true" [collapsed]="true">
       <div [ngStyle]="{'background-color': backcolor,'height':'100%'}">
         <app-basic-area id="currentMonthNewUserCount" [req]="currentMonthNewUserCount"  class="singleLine"></app-basic-area>
         <app-basic-area id="currentMonthLiveCastUseCount" [req]="currentMonthLiveCastUseCount"  class="singleLine"></app-basic-area>
@@ -69,7 +69,7 @@
       </div>
     </p-panel> 
 
-    <p-panel header="今年统计" [toggleable]="true">
+    <p-panel header="今年统计" [toggleable]="true" [collapsed]="true">
       <div [ngStyle]="{'background-color': backcolor,'height':'100%'}">
         <app-basic-area id="currentYearNewUserCount" [req]="currentYearNewUserCount"  class="singleLine"></app-basic-area>
         <app-basic-area id="currentYearLiveCastUseCount" [req]="currentYearLiveCastUseCount"  class="singleLine"></app-basic-area>
@@ -81,7 +81,7 @@
       </div>
     </p-panel> 
 
-    <p-panel header="去年统计" [toggleable]="true">
+    <p-panel header="去年统计" [toggleable]="true" [collapsed]="true">
       <div [ngStyle]="{'background-color': backcolor,'height':'100%'}">
         <app-basic-area id="currentYestYearNewUserCount" [req]="currentYestYearNewUserCount"  class="singleLine"></app-basic-area>
         <app-basic-area id="currentYestYearLiveCastUseCount" [req]="currentYestYearLiveCastUseCount"  class="singleLine"></app-basic-area>
